# spe_calculator

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  calculator.cpp  calculator.h  main.cpp  playbook.yml  test_calculator.cpp
